--- a/index.html
+++ b/index.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title></title>
-    <meta charset="utf-8" />
-
-    <!-- Reference to the Bing Maps SDK -->
-    <script type='text/javascript'
-            src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&setMkt=el&setLang=el&key=AvU-kQHyioJBmXsT7T0H96XhSNPqxmmJhanur2HxxnF9cdKfHo_bT2RwtlsbWAAR' 
-            async defer></script>
-    
-    <script type='text/javascript'>
-    async function GetMap()
-    {
-        const map = new Microsoft.Maps.Map('#myMap', {
-            mapTypeId: Microsoft.Maps.MapTypeId.aerial,
-            center: new Microsoft.Maps.Location(40.000794,23.496747),
-        });
-
-        const response = await fetch('data.json', {
-            method: 'GET',
-            headers: {
-                'Accept': 'application/json',
-            },
-        });
-        const data = await response.json();
-        
-        for (const dat of data) {
-            const pin = new Microsoft.Maps.Pushpin(new Microsoft.Maps.Location(dat.lat,dat.lon), {
-                title: dat.name,
-                subTitle: dat.description,
-                //text: dat.id
-            });
-            map.entities.push(pin);
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JSON Table</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
         }
-    }
-    </script>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-    <div id="myMap" style="position:relative;width:600px;height:400px;"></div>
+    <table id="jsonTable">
+        <thead>
+            <tr>
+                <th>Επιχείρηση</th>
+                <th>Τοποθεσία</th>
+                <th>Άδεια</th>
+                <th>Τετραγωνικά</th>
+                <th>Λήξη άδειας</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
+    <script>
+        fetch('dat.json')
+            .then(response => response.json())
+            .then(data => {
+                const tableBody = document.querySelector('#jsonTable tbody');
+                data.forEach(rowData => {
+                    const row = document.createElement('tr');
+                    rowData.forEach(cellData => {
+                        const cell = document.createElement('td');
+                        cell.textContent = cellData;
+                        row.appendChild(cell);
+                    });
+                    tableBody.appendChild(row);
+                });
+            })
+            .catch(error => console.error('Error fetching JSON:', error));
+    </script>
 </body>
 </html>
